# KiraScript

./: .gitignore  CMakeLists.txt  README.md
hdr/: Terminal.hpp
hdr/backend/: Lexer.hpp
src/: Terminal.cpp
src/backend/: AST.cpp  Lexer.cpp  Parser.cpp
src/runtime/: Scope.cpp
src/runtime/eval/: Expressions.cpp
